@@ -1,3 +1,11 @@
+2018-10-09  Ed Schonberg  <schonberg@adacore.com>
+
+	* exp_aggr.adb (Expand_Array_Aggregate): If it is not possible
+	to build in place an aggregate with component associations, set
+	the Warnings_Off flag on the generated temporary, to prevent
+	spurious warnings from the backend when compiling with the
+	-Wuninitialized gcc flag.
+
 2018-09-30  Alexandre Oliva <oliva@adacore.com>
 
 	* gcc-interface/lang-specs.h (default_compilers): When given
